--- a/plutus-book/doc/non-fungible/nonfungible7.adoc
+++ b/plutus-book/doc/non-fungible/nonfungible7.adoc
@@ -51,9 +51,9 @@ validateNonFungible nf () name tx =
                 && pendingTxOutValue o
                     == (inValue + v2)
                 && V.valueOf inValue s name == 0
-                && case pendingTxOutHashes o of
-                    Just vh -> vh == ownHash tx
-                    Nothing -> False
+                && case pendingTxOutType o of
+                    ScriptTxOut vh _ -> vh == ownHash tx
+                    _                -> False
         _                 -> False
   where
     s :: CurrencySymbol
