--- a/plutus-book/doc/parameters/crowd.adoc
+++ b/plutus-book/doc/parameters/crowd.adoc
@@ -5,7 +5,6 @@
 {-# LANGUAGE DerivingStrategies              #-}
 {-# LANGUAGE NoImplicitPrelude               #-}
 {-# LANGUAGE ScopedTypeVariables             #-}
-{-# LANGUAGE TypeApplications                #-}
 {-# LANGUAGE TemplateHaskell                 #-}
 {-# OPTIONS_GHC -fno-warn-missing-signatures #-}
 
@@ -232,8 +231,8 @@ parameters.
 ----
 mkValidatorScript :: Campaign -> ValidatorScript
 mkValidatorScript campaign = ValidatorScript $
-    $$(compileScript [|| \c -> wrap (validate c) ||]) `applyScript` lifted campaign
-    where wrap = wrapValidator @Contributor @CampaignAction
+    $$(compileScript [|| v ||]) `applyScript` lifted campaign
+    where v c = wrapValidator (validate c)
 ----
 
 This is all we have to do for the on-chain code, so let us now turn our
